# realtimebattle

./: AUTHORS  ChangeLog  EXTRAROBOTS.README  Makefile.am  Makefile.in  NEWS  README  RealTimeBattle.xpm  TODO  aclocal.m4  config.h.in  configure  configure.in  tournament.txt
Arenas/: Circle.arena  Circles.arena  Cross.arena  Diamond.arena  Flower.arena  Forest.arena  Labyrinth.arena  Makefile.am  Makefile.in  Maze.arena  MrFriendly.arena  Nippon.arena  PPconquest.arena  Pool.arena  Propeller.arena  Rooms.arena  Square.arena  Star.arena  Triangle.arena  my_Star.arena  my_Star2.arena
Documentation/German/: Makefile.am  Makefile.in  RealTimeBattle-1.html  RealTimeBattle-2.html  RealTimeBattle-3.html  RealTimeBattle-4.html  RealTimeBattle-5.html  RealTimeBattle-6.html  RealTimeBattle.dvi  RealTimeBattle.html  RealTimeBattle.info  RealTimeBattle.sgml  RealTimeBattle.txt
Robots/jBot/: JBot.java  JBotMain.java  JBot_C.java  JBot_T.java  Makefile.am  Makefile.in  jBot.robot.in
Robots/rotate_and_fire/: Makefile.am  Makefile.in  rotate_and_fire.cc  rotate_and_fire.h  rotate_and_fire_blocking.cc  rotate_and_fire_select.cc  rotate_and_fire_signal.cc
Robots/thomas2/: Makefile.am  Makefile.in  thomas2.cc
Robots/xt-bot/: Makefile.am  Makefile.in  xt-bot-a.cpp  xt-bot-b.cpp
include/: ArenaBase.h  ArenaController.h  ArenaRealTime.h  ArenaReplay.h  ArenaWindow.h  Broadcast.h  ClientInterface.h  ControlWindow.h  Dialog.h  Extras.h  GeometricalObjects.h  Gui.h  IntlDefs.h  Makefile.am  Makefile.in  MessageWindow.h  Messagetypes.h  MovingObject.h  Options.h  OptionsWindow.h  Robot.h  ScoreWindow.h  Shape.h  Shot.h  StartTournamentWindow.h  StatisticsWindow.h  Structs.h  Timer.h  Various.h  Vector2D.h  Wall.h  fdstream.h  getopt.h
m4/: ChangeLog  (+1 more)
src/: ArenaBase.cc  ArenaController.cc  ArenaRealTime.cc  ArenaReplay.cc  ArenaWindow.cc  Broadcast.cc  ClientInterface.cc  ControlWindow.cc  Dialog.cc  Extras.cc  GeometricalObjects.cc  Gui.cc  Makefile.am  Makefile.in  MessageWindow.cc  Options.cc  OptionsWindow.cc  RealTimeBattle.cc  Robot.cc  ScoreWindow.cc  Shape.cc  Shot.cc  StartTournamentWindow.cc  StatisticsWindow.cc  Structs.cc  Timer.cc  Various.cc  Vector2D.cc  getopt.c
team-framework/: ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  common.h  config.h.in  configure  configure.in  createrobot.sh  createrobotconf.sh  initcomponents.cpp  initcomponents.h  initexceptions.cpp  main.cpp  stdnamespace.h
team-framework/bots/brotfrucht/: bfclientbasicstate.cpp  bfclientbasicstate.h  bfclientshoothalfstate.cpp  bfclientshoothalfstate.h  bfclientshoottwicestate.cpp  bfclientshoottwicestate.h  bfclientspecificrepository.cpp  bfclientspecificrepository.h  bfclientstateenum.h  bffactory.cpp  bffactory.h  bfinternalserverspecificrepository.cpp  bfinternalserverspecificrepository.h  bfserverbasicstate.cpp  bfserverbasicstate.h  bfservernorotatestate.cpp  bfservernorotatestate.h  bfserverrotatestate.cpp  bfserverrotatestate.h  bfserverstateenum.h  bfsharedserverspecificrepository.cpp  bfsharedserverspecificrepository.h  brotfruchtnamespace.h
team-framework/bots/cobra/: cobra_client_basicstate.cpp  cobra_client_basicstate.h  cobra_clientspecificrepository.cpp  cobra_clientspecificrepository.h  cobra_factory.cpp  cobra_factory.h  cobra_internalserverspecificrepository.cpp  cobra_internalserverspecificrepository.h  cobra_namespace.h  cobra_server_basicstate.cpp  cobra_server_basicstate.h  (+2 more)
team-framework/buildinternal/: acinclude.m4
team-framework/conf/: Makefile.am  Makefile.in
team-framework/exceptions/: confignotloadedexception.cpp  confignotloadedexception.h  configurationparserexception.cpp  configurationparserexception.h  exceptionsnamespace.h  ioexception.cpp  ioexception.h  keynotfoundexception.cpp  keynotfoundexception.h  parserexception.cpp  parserexception.h  resourcenotfoundexception.cpp  resourcenotfoundexception.h  rtbexception.cpp  rtbexception.h  serverispresentexception.cpp  serverispresentexception.h  strategyexception.cpp  strategyexception.h
team-framework/gamecontrol/: clientcoordinator.cpp  clientcoordinator.h  clientgamecontroller.cpp  clientgamecontroller.h  coordinator.h  coordinatorcomposite.cpp  coordinatorcomposite.h  coordinatorleaf.cpp  coordinatorleaf.h  gamecontroller.h  gamecontrolnamespace.h  gameoptionsrepository.h  servercoordinator.cpp  servercoordinator.h  servergamecontroller.cpp  servergamecontroller.h
team-framework/io/: clientcommunicator.h  clientconnection.h  connection.h  iofactory.h  ionamespace.h  localclientconnection.cpp  localclientconnection.h  remoteclientconnection.h  rtbconnection.h  servercommunicator.h  serverconnection.h  unixclientcommunicator.cpp  unixclientcommunicator.h  unixinstream.cpp  unixinstream.h  unixinstreambuf.cpp  unixinstreambuf.h  unixiofactory.cpp  unixiofactory.h  unixoutstream.cpp  unixoutstream.h  unixoutstreambuf.cpp  unixoutstreambuf.h  unixremoteclientconnection.cpp  unixremoteclientconnection.h  unixrtbconnection.cpp  unixrtbconnection.h  unixservercommunicator.cpp  unixservercommunicator.h  unixserverconnection.cpp  unixserverconnection.h
team-framework/log/: logdriver.h  logger.cpp  logger.h  lognamespace.h  nulllogdriver.h  rtblogdriver.cpp  rtblogdriver.h  sysloglogdriver.cpp  sysloglogdriver.h  unixfilelogdriver.cpp  unixfilelogdriver.h
team-framework/parser/: argument_type.h  configurationparser.cpp  configurationparser.h  game_option_type.h  message_from_robot_type.h  message_to_robot_type.h  object_type.h  parsernamespace.h  robot_option_type.h  rtbparser.cpp  rtbparser.h  rtbparseresult.h  warning_type.h
team-framework/rtbglobal/: masterresourcecontrol.cpp  masterresourcecontrol.h  pmap.h  pvector.h  rtbglobalnamespace.h  rtbinit.cpp  rtbinit.h
team-framework/strategies/: clientspecificrepository.h  clientstate.cpp  clientstate.h  clientstatedata.cpp  clientstatedata.h  internalserverspecificrepository.h  serverstate.cpp  serverstate.h  serverstatedata.cpp  serverstatedata.h  sharedserverspecificrepository.h  specificrepository.h  state.h  strategiesnamespace.h  strategyfactory.h
(+135 files in other folders)
