arenadatadir = $(RTB_DIR)/Arenas

arenadata_DATA = \
	Circle.arena Circles.arena Cross.arena Diamond.arena Flower.arena \
	Forest.arena Labyrinth.arena Nippon.arena Pool.arena Rooms.arena \
	Square.arena Star.arena Triangle.arena MrFriendly.arena my_Star2.arena \
	my_Star.arena PPconquest.arena Maze.arena Propeller.arena

EXTRA_DIST = $(arenadata_DATA)
