## Process this file with automake to produce Makefile.in

## Created by Anjuta, heavy modified by Johannes Nicolai
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

pkginclude_HEADERS = \
	Messagetypes.h

EXTRA_DIST = \
	ControlWindow.h\
	IntlDefs.h\
	Options.h\
	Various.h\
	ArenaRealTime.h\
	ArenaReplay.h\
	ArenaController.h\
	ArenaBase.h\
	Gui.h\
	Vector2D.h\
	Structs.h\
	Timer.h\
	Shape.h\
	Extras.h\
	Shot.h\
	Wall.h\
	Robot.h\
	MessageWindow.h\
	ArenaWindow.h\
	GeometricalObjects.h\
	MovingObject.h\
	OptionsWindow.h\
	fdstream.h\
	ScoreWindow.h\
	StatisticsWindow.h\
	Dialog.h\
	StartTournamentWindow.h\
	getopt.h\
	Broadcast.h\
	ClientInterface.h
