robotexecdir = $(RTB_DIR)/Robots
INCLUDES = -I$(top_srcdir)/include
robotexec_PROGRAMS = xt-bot-a.robot xt-bot-b.robot
xt_bot_a_robot_SOURCES = xt-bot-a.cpp
xt_bot_b_robot_SOURCES = xt-bot-b.cpp
xtdir = $(RTB_DIR)/Robots/xt-bot
xt_DATA = $(xt_bot_a_robot_SOURCES) $(xt_bot_b_robot_SOURCES) Makefile.am 

